--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Hamstra API ",
   "main": "index.js",
   "publishConfig": {
-    "@ThomasKammen:registry": "https://npm.pkg.github.com"
+    "registry": "https://npm.pkg.github.com"
   },
   "scripts": {
     "test": "Test successfull"
@@ -19,7 +19,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/horrentotaal/hamstra-api.git"
+    "url": "https://github.com/horrentotaal/hamstra-api.git"
   },
   "bugs": {
     "url": "https://github.com/horrentotaal/hamstra-api/issues"
