--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Hamstra API ",
   "main": "index.js",
   "publishConfig": {
-    "registry": "https://npm.pkg.github.com"
+    "@ThomasKammen:registry": "https://npm.pkg.github.com"
   },
   "scripts": {
     "test": "Test successfull"
