--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "hamstra-api",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "description": "Hamstra API ",
   "main": "index.js",
   "publishConfig": {
@@ -12,8 +12,7 @@
   "license": "ISC",
   "directories": {
     "doc": "docs",
-    "lib": "lib",
-    "test": "test"
+    "lib": "lib"
   },
   "repository": {
     "type": "git",
