--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "name": "hamstra-api",
-  "version": "1.0.3",
+  "version": "1.0.5",
   "description": "Hamstra API ",
+  "main": "index.js",
   "publishConfig": {
     "@ThomasKammen:registry": "https://npm.pkg.github.com"
   },
