--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
-    "name": "hamstra-api/horrentotaal",
-    "version": "1,1,2",
+    "name": "@ThomasKammen/hamstra-api",
+    "version": "1,1,3",
     "description": "Horrentotaal hamsta API",
     "private": false,
     "keywords": [
