--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "hamstra-api",
-  "version": "1.1.2",
+  "name": "@ThomasKammen/hamstra-api",
+  "version": "1.1.3",
   "description": "Hamstra API ",
   "publishConfig": {
     "@ThomasKammen:registry": "https://npm.pkg.github.com"
