--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "@horrentotaal/hamstra-api",
+    "name": "horrentotaal/hamstra-api",
     "version": "1.1.4",
     "description": "Horrentotaal hamsta API",
     "private": false,
