--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
     "name": "horrentotaal/hamstra-api",
-    "version": "1.1.4",
-    "description": "Horrentotaal hamsta API",
+    "version": "1.2.0",
+    "description": "Horrentotaal hamstra API",
     "private": false,
     "keywords": [
         "swagger",
@@ -30,10 +30,10 @@
         "friendsofphp/php-cs-fixer": "~2.12"
     },
     "autoload": {
-        "psr-4": { "Swagger\\Client\\" : "lib/" }
+        "psr-4": { "HamstraApi\\Client\\" : "lib/" }
     },
     "autoload-dev": {
-        "psr-4": { "Swagger\\Client\\" : "test/" }
+        "psr-4": { "HamstraApi\\Client\\" : "test/" }
     },
     "publishConfig": {
         "registry": "https://npm.pkg.github.com/",
