--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@horrentotaal/hamstra-api",
-  "version": "1.1.4",
-  "description": "Hamstra API ",
+  "version": "1.2.0",
+  "description": "Horrentotaal hamstra API",
   "publishConfig": {
     "@ThomasKammen:registry": "https://npm.pkg.github.com"
   },
