--- a/composer.json
+++ b/composer.json
@@ -28,9 +28,15 @@
         "friendsofphp/php-cs-fixer": "~2.12"
     },
     "autoload": {
-        "psr-4": { "Swagger\\Client\\" : "lib/" }
+        "psr-4": {
+            "Swagger\\Client\\" : "lib/",
+            "Swagger\\Client\\Api\\": "lib/Api"
+        }
     },
     "autoload-dev": {
-        "psr-4": { "Swagger\\Client\\" : "test/" }
+        "psr-4": {
+            "Swagger\\Client\\" : "lib/",
+            "Swagger\\Client\\Api\\": "lib/Api"
+        }
     }
 }
