--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/horrentotaal/hamstra-api.git"
+    "url": "https://github.com/horrentotaal/hamstra-api.git"
   },
   "bugs": {
     "url": "https://github.com/horrentotaal/hamstra-api/issues"
