--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@horrentotaal/hamstra-api",
-  "version": "5.1",
+  "version": "v5.1",
   "description": "Horrentotaal hamstra API",
   "publishConfig": {
     "@ThomasKammen:registry": "https://npm.pkg.github.com"
